--- a/query_panel/index.html
+++ b/query_panel/index.html
@@ -107,12 +107,10 @@
           v-show="(hasData || hasError || isLoading)"
           id="view-1"
         >
-          <img
-            v-if="isLoading"
-            id="spinner"
-            src="__ROOT__/assets/spinner.gif"
-          />
-
+          <div v-if="isLoading" id="loading_container">
+            <img id="spinner" src="__ROOT__/assets/spinner.gif" />
+            <vscode-button @click="cancelQuery">Cancel query</vscode-button>
+          </div>
           <div v-show="hasData" style="width: 100%">
             <div v-show="isPerspective" style="width: 100%; height: 100%">
               <perspective-viewer
