--- a/query_panel/index.html
+++ b/query_panel/index.html
@@ -109,7 +109,7 @@
         >
           <div v-if="isLoading" id="loading_container">
             <img id="spinner" src="__ROOT__/assets/spinner.gif" />
-            <div style="margin-bottom: 8px">
+            <div v-if="showHint" style="margin-bottom: 8px">
               {{ loadingMessage }} <a :href="loadingLink">Docs</a>
             </div>
             <vscode-button @click="cancelQuery">Cancel query</vscode-button>
