feat: spinner for execute SQL (#1039)
* feat: added hint message

* feat: show hint after an hour

* fix: cleanInterval

* fix: increase interval

---------

Co-authored-by: anandgupta42 <93243293+anandgupta42@users.noreply.github.com>
Co-authored-by: suryaiyer95 <surya@altimate.ai>

--- a/query_panel/index.html
+++ b/query_panel/index.html
@@ -109,6 +109,9 @@
         >
           <div v-if="isLoading" id="loading_container">
             <img id="spinner" src="__ROOT__/assets/spinner.gif" />
+            <div v-if="showHint" style="margin-bottom: 8px">
+              {{ loadingMessage }} <a :href="loadingLink">Docs</a>
+            </div>
             <vscode-button @click="cancelQuery">Cancel query</vscode-button>
           </div>
           <div v-show="hasData" style="width: 100%">
