fix: add storybook update

--- a/webview_panels/.storybook/preview-head.html
+++ b/webview_panels/.storybook/preview-head.html
@@ -1,7 +1,7 @@
-<meta
+<!-- <meta
   http-equiv="Content-Security-Policy"
   content="default-src 'none'; worker-src blob:; font-src http://localhost:6006; style-src 'unsafe-inline' self; img-src self http://localhost:6006 data:; script-src self 'unsafe-eval' http://localhost:6006; connect-src http://localhost:6006 ws://localhost:6006/"
-/>
+/> -->
 
 <style>
   perspective-viewer {
