query panel migration revamp (#1093)
* feat: query panel migration

* feat: add query panel default view

* fix: query panel components

* fix: front end changes

* fix: perspective in vscode

* fix: ui styling

* fix: query cancel delay

* fix: loading icon

* fix: hint logic

* fix: show loading when triggered before webview ready

* fix: perspective ui fixes

* fix: query panel fixes

* chore: remove table scale for perspective

* fix: query limit fixes

* fix: code cleanup

* fix: query panel perspective themes

* fix: toggle v2 buttons

* chore: text changes as per comments

* fix: query cancel issue

* fix: add storybook update

* fix: query panel sql ui issues

* fix: add title for testing

* fix: ignore v1

* fix: use right config variable

---------

Co-authored-by: anandgupta42 <93243293+anandgupta42@users.noreply.github.com>

--- a/query_panel/index.html
+++ b/query_panel/index.html
@@ -95,7 +95,7 @@
           "Welcome 🚀" }}
         </vscode-panel-tab>
         <vscode-panel-tab id="tab-4" v-show="hasData" @click="togglePerspective"
-          >{{ isPerspective ? "Show legacy UI" : "Show new UI"
+          >{{ isPerspective ? "Switch to legacy UI" : "Switch to new UI"
           }}</vscode-panel-tab
         >
         <vscode-panel-tab id="tab-5" @click="onFeedback"
@@ -133,6 +133,21 @@
                   style="margin-left: 5px; margin-bottom: 4px"
                   >Download as CSV</vscode-button
                 >
+              </div>
+              <br />
+              <div class="new-ux-alert">
+                <span
+                  >This legacy query results UI will be deprecated soon. The new
+                  UI includes this functionality plus additional features.
+                  Please contact us via
+                  <a href="https://getdbt.slack.com/archives/C05KPDGRMDW"
+                    >Slack</a
+                  >
+                  if needed.</span
+                >
+                <vscode-button class="btn-new-ux" @click="toggleV2"
+                  >Switch to new UI
+                </vscode-button>
               </div>
               <div id="query-results" :style="getTableStyles()"></div>
             </div>
@@ -199,6 +214,12 @@
           </div>
 
           <div class="help-body">
+            <div class="new-ux-alert">
+              We are launching new and improved query results panel.
+              <vscode-button class="btn-new-ux" @click="toggleV2"
+                >Switch to new UI
+              </vscode-button>
+            </div>
             <h2>Previewing Query</h2>
             <p>
               Press Cmd+Enter (Mac) or Control+Enter (Windows/Linux) to run a
