feat: added static lineage
WIP

WIP

feat: added new sql lineage panel

WIP

WIP

WIP

WIP

WIP

feat: added sql lineage panel

--- a/new_lineage_panel/index.html
+++ b/new_lineage_panel/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="__ROOT__/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <script>
+      var lineageType = "__LINEAGE_TYPE__";
+    </script>
   </head>
   <body>
     <div id="root"></div>
